--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,5 +1,6 @@
 Django==4.1
+django_filter==22.1
 djangorestframework==3.13.1
-gunicorn==20.1.0
-psycopg2-binary==2.9.3
+drf_spectacular==0.23.1
+pytest==7.1.2
 python-decouple==3.6
