--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
+          python -m pip install -r project/requirements.txt
  
       - name: Run migrations
         run: python manage.py migrate
