--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,6 +1,11 @@
 Django==4.1
+django_environ==0.9.0
 django_filter==22.1
 djangorestframework==3.13.1
 drf_spectacular==0.23.1
+environ==1.0
+protobuf==4.21.5
 pytest==7.1.2
-python-decouple==3.6
+django-storages[google]==1.13.1
+google-cloud-secret-manager==2.12.4
+google-auth==2.11.0
